crates/mabo-doc/tests/snapshots/render__render@types_non_zero.mabo.snap
---
source: crates/mabo-doc/tests/render.rs
description: "struct Sample {\n    f01: NonZero<u8> @1,\n    f02: NonZero<u16> @2,\n    f03: NonZero<u32> @3,\n    f04: NonZero<u64> @4,\n    f05: NonZero<u128> @5,\n    f06: NonZero<i8> @6,\n    f07: NonZero<i16> @7,\n    f08: NonZero<i32> @8,\n    f09: NonZero<i64> @9,\n    f10: NonZero<i128> @10,\n    f11: NonZero<String> @11,\n    f12: NonZero<Bytes> @12,\n    f13: NonZero<Vec<String>> @13,\n    f14: NonZero<HashMap<String, Bytes>> @14,\n    f15: NonZero<HashSet<String>> @15,\n}"
input_file: crates/mabo-parser/tests/inputs/types_non_zero.mabo
---
--- types_non_zero/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>types_non_zero - Mabo</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema types_non_zero</h2>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.Sample.html">Sample</a>
      </td>
      <td>
        
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- types_non_zero/struct.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Mabo</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">types_non_zero</a>::<span class="name-struct">Sample</span>
  </h2>
  <pre class="item-definition my-2">struct Sample {
    f01: NonZero&lt;u8&gt; @1,
    f02: NonZero&lt;u16&gt; @2,
    f03: NonZero&lt;u32&gt; @3,
    f04: NonZero&lt;u64&gt; @4,
    f05: NonZero&lt;u128&gt; @5,
    f06: NonZero&lt;i8&gt; @6,
    f07: NonZero&lt;i16&gt; @7,
    f08: NonZero&lt;i32&gt; @8,
    f09: NonZero&lt;i64&gt; @9,
    f10: NonZero&lt;i128&gt; @10,
    f11: NonZero&lt;String&gt; @11,
    f12: NonZero&lt;Bytes&gt; @12,
    f13: NonZero&lt;Vec&lt;String&gt;&gt; @13,
    f14: NonZero&lt;HashMap&lt;String, Bytes&gt;&gt; @14,
    f15: NonZero&lt;HashSet&lt;String&gt;&gt; @15,
}</pre>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">16</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">f01</span>:
        <span class="field-type">NonZero&lt;u8&gt;</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..2</code></p>
          <ul>
          <li>value: <strong>u8</strong> <code>1</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f02</span>:
        <span class="field-type">NonZero&lt;u16&gt;</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..4</code></p>
          <ul>
          <li>value: <strong>u16</strong> <code>1..3</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f03</span>:
        <span class="field-type">NonZero&lt;u32&gt;</span>
        <span class="field-id">@3</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f04</span>:
        <span class="field-type">NonZero&lt;u64&gt;</span>
        <span class="field-id">@4</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..11</code></p>
          <ul>
          <li>value: <strong>u64</strong> <code>1..10</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f05</span>:
        <span class="field-type">NonZero&lt;u128&gt;</span>
        <span class="field-id">@5</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..20</code></p>
          <ul>
          <li>value: <strong>u128</strong> <code>1..19</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f06</span>:
        <span class="field-type">NonZero&lt;i8&gt;</span>
        <span class="field-id">@6</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..2</code></p>
          <ul>
          <li>value: <strong>i8</strong> <code>1</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f07</span>:
        <span class="field-type">NonZero&lt;i16&gt;</span>
        <span class="field-id">@7</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..4</code></p>
          <ul>
          <li>value: <strong>i16</strong> <code>1..3</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f08</span>:
        <span class="field-type">NonZero&lt;i32&gt;</span>
        <span class="field-id">@8</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>i32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f09</span>:
        <span class="field-type">NonZero&lt;i64&gt;</span>
        <span class="field-id">@9</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..11</code></p>
          <ul>
          <li>value: <strong>i64</strong> <code>1..10</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f10</span>:
        <span class="field-type">NonZero&lt;i128&gt;</span>
        <span class="field-id">@10</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..20</code></p>
          <ul>
          <li>value: <strong>i128</strong> <code>1..19</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f11</span>:
        <span class="field-type">NonZero&lt;String&gt;</span>
        <span class="field-id">@11</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..</code></p>
          <ul>
          <li>value: <strong>String</strong> <code>1..</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f12</span>:
        <span class="field-type">NonZero&lt;Bytes&gt;</span>
        <span class="field-id">@12</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..</code></p>
          <ul>
          <li>value: <strong>Bytes</strong> <code>1..</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f13</span>:
        <span class="field-type">NonZero&lt;Vec&lt;String&gt;&gt;</span>
        <span class="field-id">@13</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..</code></p>
          <ul>
          <li>value: <strong>Vec</strong> <code>1..</code>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>String</strong> <code>1..</code></li>
          </ul>
          </li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f14</span>:
        <span class="field-type">NonZero&lt;HashMap&lt;String, Bytes&gt;&gt;</span>
        <span class="field-id">@14</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..</code></p>
          <ul>
          <li>value: <strong>HashMap</strong> <code>1..</code>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>key: <strong>String</strong> <code>1..</code></li>
          <li>value: <strong>Bytes</strong> <code>1..</code></li>
          </ul>
          </li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f15</span>:
        <span class="field-type">NonZero&lt;HashSet&lt;String&gt;&gt;</span>
        <span class="field-id">@15</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..</code></p>
          <ul>
          <li>value: <strong>HashSet</strong> <code>1..</code>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>String</strong> <code>1..</code></li>
          </ul>
          </li>
          </ul>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
